--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,8 +1,5 @@
-<head>
-    <link rel="stylesheet" href="../src/css/register.css">
-</head>
 <div class="form">
-    <button class="close-button" onclick="hideRegister()">X</button>
+    <button class="close-button">X</button>
     <p class="title">¡Regístrate!</p>
     <p class="message">Regístrate y obtén acceso a nuestra plataforma.</p>
         <div class="flex">
@@ -30,6 +27,6 @@
         <input class="input" type="password" placeholder="" required="">
         <span>Confirmar contraseña</span>
     </label>
-    <button class="submit" onclick="successLogin()">Enviar</button>
-    <p class="signin">¿Ya tienes una cuenta? <a onclick="hideRegister(), showLogin()">Iniciar sesión</a> </p>
+    <button class="submit">Enviar</button>
+    <p class="signin">¿Ya tienes una cuenta? <a>Iniciar sesión</a> </p>
 </div>
