--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,14 +1,14 @@
 .form-container-login {
     
     height: 500px;
-    background-color: #504136;
+    background-color: #8a705d;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 10px;
     box-sizing: border-box;
     padding: 20px 30px;
     width: 400px;
     position: fixed;
-    top: calc(50% - 100px);
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     cursor: default;
@@ -69,7 +69,7 @@
     border-radius: 20px;
     border: 0 !important;
     outline: 0 !important;
-    background: #8a705d;
+    background: #504136;
     color: white;
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -78,7 +78,7 @@
 
 .form-btn-login:hover {
     background-color: white;
-    color: #504136;
+    color: #8a705d;
 
 }
 
