--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,8 @@
 <div>
-    <div class="popups">
-        <ng-container *ngIf="loginService.isOpen$ | async">
-            <app-login></app-login>
-        </ng-container>
-        <ng-container *ngIf="registerService.isOpen$ | async">
-            <app-register></app-register>
-        </ng-container>
-    </div>
-    <div class="wrapper-container" style="display: flex; flex-direction: column; min-height: 100vh;">
-        <app-header (openRegister)="handleOpenRegisterEvent" (openLogin)="handleOpenLoginEvent()"></app-header>
+    <app-login *ngIf="loginService.isOpen$ | async"></app-login>
+    <app-register *ngIf="registerService.isOpen$ | async"></app-register>
+    <div id="wrapper-container" style="display: flex; flex-direction: column; min-height: 100vh;">
+        <app-header (openRegister)="handleOpenRegisterEvent()" (openLogin)="handleOpenLoginEvent()"></app-header>
         <div class="home-content">
         </div>
         <app-footer></app-footer>
