--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -123,12 +123,12 @@
     color: white;
     font-size: 16px;
     transform: .3s ease;
-    background-color: var(--mainColor);
+    background-color: #504136;
 }
 
 .submit:hover {
     background-color: white;
-    color: var(--mainColor);
+    color: #504136;
 }
 
 .close-button {
