login y register diseño completo

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <app-login *ngIf="loginService.isOpen$ | async"></app-login>
     <app-register *ngIf="registerService.isOpen$ | async"></app-register>
     <div id="wrapper-container" style="display: flex; flex-direction: column; min-height: 100vh;">
-        <app-header (openRegister)="handleOpenRegisterEvent()" (openLogin)="handleOpenLoginEvent()"></app-header>
+        <app-header></app-header>
         <div class="home-content">
         </div>
         <app-footer></app-footer>
