--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,6 +4,65 @@
     <div id="wrapper-container" style="display: flex; flex-direction: column; min-height: 100vh;">
         <app-header></app-header>
         <div class="home-content">
+            <h1>ORGANIZA TUS EVENTOS, <br>GESTIONA TU TIEMPO</h1>
+            <h3>
+                ¡Organiza tu día con facilidad! Nuestro Generador de Horarios es la solución perfecta 
+                para empresas, organizaciones y estudiantes. Crea horarios personalizados en minutos y
+                maximiza tu productividad. ¡Prueba ahora!
+            </h3>
+            <div class="home-cards-grid">
+                <div class="card long">
+                  <div class="card-header">GESTIONA TUS EVENTOS FÁCILMENTE</div>
+                  <div class="card-body">
+                    Crea tus propios recordatorios, mira los eventos compartidos y modifica las notificaciones.
+                  </div>
+                </div>
+                
+                <div class="card short">
+                  <div class="card-header">HEADER2</div>
+                  <div class="card-body">
+                    Description for the second element.
+                  </div>
+                </div>
+
+                <div class="card long">
+                    <div class="card-header">HORARIOS</div>
+                    <div class="card-body">
+                      Podrás seleccionar entre todas tus organizaciones para ver los distintos horarios
+                    </div>
+                  </div>
+              
+                <div class="card short">
+                  <div class="card-header">HEADER 3</div>
+                  <div class="card-body">
+                    Description for the third element.
+                  </div>
+                </div>
+            </div>
+            <h2>SOMOS TIMIFY, ÚNETE A ESTA GRAN COMUNIDAD</h2>
+            <div class="home-stats">
+                <div class="stat">
+                    <div class="stat-number">50+</div>
+                    <div class="stat-text">Miembros ya gestionan su horario con TIMIFY</div>
+                </div>
+                <div class="stat">
+                    <div class="stat-number">10+</div>
+                    <div class="stat-text">Organizaciones confían en la eficiencia de TIMIFY</div>
+                </div>
+                <div class="stat">
+                    <div class="stat-number">9.2/10</div>
+                    <div class="stat-text">Nuestros usuarios valoran gratamente la gestión y eficiencia</div>
+                </div>
+            </div>
+            <div class="home-novedades">
+              <div class="novedad-info first">
+                <h2>NUEVO DISEÑO</h2>
+                <p>TODOS TUS EVENTOS A LA MANO</p>
+              </div>
+              <div class="novedad-info second">
+                
+              </div>
+            </div>
         </div>
         <app-footer></app-footer>
     </div>
