--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,15 +1,154 @@
 .home-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     flex: 1;
+    color: #504136;
+    width: 50%;
+    align-self: center;
 }
 
-#popups {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+.home-content h1{
+    font-size: xxx-large;
+    margin-top: 60px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.home-content h2{
+    font-size: xx-large;
+    margin-top: 60px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.home-content h3{
+    font-size: large;
+    text-align: center;
+}
+
+
+.home-cards-grid {
+    display: grid;
+    margin-top: 40px;
+    grid-template-columns: 2fr 2fr;
+    grid-template-rows: 6fr 6fr;
+    grid-gap: 20px;
+}
+
+.card {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.long {
+    grid-row: span 15;
+}
+
+.short {
+    grid-row: span 1;
+}
+
+.card-header {
+    padding: 20px 10px;
+    font-size: x-large;
+    text-align: center;
+    font-weight: 800;
+}
+
+.card-body {
+    padding: 10px;
+    text-align: center;
+    flex: 1;
+    font-size: large;
+    font-weight: 600;
+}
+
+.home-cards-grid > :nth-child(1) {
+    background-color: #504136ab;
+    color: white;
+}
+
+.home-cards-grid > :nth-child(2), .home-cards-grid > :nth-child(4) {
+    background-color: rgba(95, 158, 160, 0.201);
+    color: #504136;
+}
+
+.home-cards-grid > :nth-child(3) {
+    background-color: #50413655;
+    color: white;
+}
+
+.home-stats{
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+}
+
+.stat{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 10px;
+    padding: 20px;
+    background-color: #504136;
+    color: white;
+}
+
+.stat-number{
+    font-size: xx-large;
+    font-weight: 800;
+}
+
+.stat-text{
+    font-size: large;
+    font-weight: 600;
+}
+
+.home-novedades{
+    position: relative;
+    display: flex;
+    flex-direction: row;
     align-items: center;
-    z-index: 999;
+    gap: 20px;
+    margin: 100px 0px;
+    width: 100%;
+}
+
+.novedad-info{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border: 1px solid #504136;
+    color: #504136;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    height: 150px;
+
+}
+
+.novedad-info h2{
+    margin: 0;
+}
+
+.novedad-info p{
+    font-weight: 600;
+}
+
+.first{
+    width: 50%;
+    z-index: 1;
+    background-color: rgba(95, 158, 160, 0.201);
+}
+.second{
+    position: absolute;
+    right: 5px;
+    width: 50%;
+    top: 20px;
+    z-index: 2;
+    background-color: white;
 }
