creados servicios apiclient para login y register

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,8 +3,8 @@
     <button (click)="closeLoginPopup()" class="close-button-login">X</button>
     <p class="title-login">¡Bienvenido de nuevo!</p>
     <div class="form-login">
-        <input type="email" class="input-login" placeholder="Email">
-        <input type="password" class="input-login" placeholder="Contraseña">
+        <input id="email" type="email" class="input-login" placeholder="Email">
+        <input id="password" type="password" class="input-login" placeholder="Contraseña">
         <button (click)="checkLogin()" class="form-btn-login">Iniciar Sesión</button>
     </div>
     <p class="sign-up-label-login">
