--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
       <nav>
         <a href="">Calendario</a>
         <a href="">Horarios</a>
-        <a href="">Organizaciones</a>
+        <a href="/organizations">Organizaciones</a>
       </nav>
     </div>
     
