--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,13 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css');
 
+
+:root {
+    --mainColor: #504136;
+    --mainColorLighter: #E3D5CA;
+    --mainTextWhite: #fff;
+    --mainTextBlack: #000;
+}
+
 /* Reset CSS */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
