--- a/src/app/admin-add-event/admin-add-event.component.html
+++ b/src/app/admin-add-event/admin-add-event.component.html
@@ -11,19 +11,62 @@
                 <div class="admin-content">
                     <div class="event-filter">
                         <div class="filter">
-                            <p>ORGANIZACIONES</p>
+                            <p><strong>ORGANIZACIONES</strong></p>
                             <select name="" id=""></select>
                         </div>
                         <div class="filter">
-                            <p>ACTIVIDADES</p>
+                            <p><strong>ACTIVIDADES</strong></p>
                             <select name="" id=""></select>
                         </div>
                         <div class="filter">
-                            <p>GRUPOS</p>
+                            <p><strong>GRUPOS</strong></p>
                             <select name="" id=""></select>
                         </div>
                     </div>
+                    <div class="event-description">
+                        <div class="event-data">
+                            <p>Grupos Añadidos</p>
+                            <input type="text" name="" id=""  placeholder="Escriba el id de los grupos">
+                        </div>
+                        <div class="event-data">
+                            <p>Titulo</p>
+                            <input type="text" name="" id=""  placeholder="ej.: Examen Asignatura">
+                        </div>
+                        <div class="event-data">
+                            <p>Descripción</p>
+                            <input type="text" name="" id=""  placeholder="ej.: ...">
+                        </div>
+                        <div class="event-data">
+                            <p>Inicio</p>
+                            <input type="text" name="" id=""  placeholder="ej.:XX/XX/XXXX/XX:XX">
+                        </div>
+                        <div class="event-data">
+                            <p>Final</p>
+                            <input type="text" name="" id=""  placeholder="ej.:XX/XX/XXXX/XX:XX">
+                        </div>
+                        <div class="event-data">
+                            <p>Ubicación</p>
+                            <input type="text" name="" id=""  placeholder="ej.: Facultad de Ingeniería. Lab2-2">
+                        </div>
+                        <div class="event-data">
+                            <p>Notas</p>
+                            <input type="text" name="" id=""  placeholder="ej.: Traer bolígrafo">
+                        </div>
+                        <div class="event-data">
+                            <p>Adjuntar fichero</p>
+                            <input type="text" name="" id=""  placeholder="ej.: guiaExamen.pdf">
+                        </div>
+                        <div class="event-data">
+                            <p>Repetir</p>
+                            <select name="" id="">ej: Semanal</select>
+                        </div>
+                    </div>
+                    <div class="buttons">
+                        <button>AÑADIR GRUPO</button>
+                        <button>ENVIAR</button>
+                    </div>
                 </div>
+                
             </div>
         </div>
         <app-footer></app-footer>
