--- a/src/app/admin-buttons/admin-buttons.component.css
+++ b/src/app/admin-buttons/admin-buttons.component.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    width: 100%;
 }
 
 #active {
@@ -16,9 +17,9 @@
 
 .admin-option {
     color: var(--mainColor);
-    max-width: 70%;
     text-align: center;
-    padding: 15px 20px;
+    padding: 25px 30px;
     background-color: var(--mainColorLighter);
     justify-content: center;
+    font-size: x-large;
 }
