Haciendo admin organizaciones

--- a/src/app/admin-buttons/admin-buttons.component.html
+++ b/src/app/admin-buttons/admin-buttons.component.html
@@ -1,12 +1,12 @@
 <div class="admin-buttons-container">
     <div class="admin-option" id="active">
-        <a href="">Añadir Evento</a>
+        <a href="/admin">Añadir Evento</a>
     </div>
     <div class="admin-option" id="noactive">
         <a href="">Crear organización</a>
     </div>
     <div class="admin-option" id="noactive">
-        <a href="">Gestionar organizaciones</a>
+        <a href="/adminOrganizations">Gestionar organizaciones</a>
     </div>
     <div class="admin-option" id="noactive">
         <a href="">Gestionar actividades</a>
