--- a/src/app/admin-organizations/admin-organizations.component.css
+++ b/src/app/admin-organizations/admin-organizations.component.css
@@ -12,7 +12,7 @@
     margin-bottom: 24px;
 }
 
-.admin-add-event-content-container {
+.admin-organizations-content-container {
     border-radius: 20px;
     display: flex;
     flex-direction: row;
@@ -28,21 +28,10 @@
     padding: 15px 20px;
 }
 
-.event-filter {
+.header-admin-organizations-container {
     display: flex;
     margin-top: 16px;
-    position: relative;
-}
-
-.event-filter > *:nth-child(3) {
-    position: absolute;
-    right: 0;
-}
-
-.event-filter > *:nth-child(2) {
-    position: absolute;
-    left: 0;
-    right: 0;
+    justify-content: space-between;
 }
 
 .filter {
@@ -55,6 +44,7 @@
     width: 200px;
     height: 30px;
 }
+
 
 .event-description {
     display: flex;
