Arreglando admin organizaciones

--- a/src/app/admin-organizations/admin-organizations.component.html
+++ b/src/app/admin-organizations/admin-organizations.component.html
@@ -19,32 +19,44 @@
                     <div class="event-description">
                         <div class="event-data">
                             <p>Titulo</p>
-                            <input type="text" name="" id=""  placeholder="ej.: Producción de Software">
-                            <i class="fa fa-pencil"></i>
+                            <div class="input-container">
+                                <input type="text" name="" id=""  placeholder="ej.: Producción de Software">
+                                <i class="fa fa-pencil"></i>
+                            </div>
                         </div>
                         <div class="event-data">
                             <p>Descripción</p>
-                            <input type="text" name="" id=""  placeholder="ej.: ...">
-                            <i class="fa fa-pencil"></i>
+                            <div class="input-container">
+                                <input type="text" name="" id=""  placeholder="ej.: ...">
+                                <i class="fa fa-pencil"></i>
+                            </div>
                         </div>
                         <div class="event-data">
                             <p>Correo electrónico</p>
-                            <input type="email" name="" id=""  placeholder="ej.:pepito@gmail.com">
-                            <i class="fa fa-pencil"></i>
+                            <div class="input-container">
+                                <input type="email" name="" id=""  placeholder="ej.:pepito@gmail.com">
+                                <i class="fa fa-pencil"></i>
+                            </div>
+
                         </div>
                         <div class="event-data">
                             <p>Dominio</p>
-                            <input type="url" name="" id=""  placeholder="ej.:timify.es">
-                            <i class="fa fa-pencil"></i>
+                            <div class="input-container">
+                                <input type="url" name="" id=""  placeholder="ej.:timify.es">
+                                <i class="fa fa-pencil"></i>
+                            </div>
                         </div>
                         <div class="event-data">
                             <p>Contacto</p>
-                            <input type="text" name="" id=""  placeholder="ej.: +XX XXXXXXXXX">
-                            <i class="fa fa-pencil"></i>
+                            <div class="input-container">
+                                <input type="text" name="" id=""  placeholder="ej.: +XX XXXXXXXXX">
+                                <i class="fa fa-pencil"></i>
+                            </div>
+                            
                         </div>
                         <div class="event-data">
                             <p>Privacidad</p>
-                            <input type="text" name="" id=""  placeholder="ej.: privado">
+                            <select name="" id=""></select>
                         </div>
                     </div>
                     <div class="buttons">
