--- a/src/app/admin-organizations/admin-organizations.component.css
+++ b/src/app/admin-organizations/admin-organizations.component.css
@@ -45,7 +45,6 @@
     height: 30px;
 }
 
-
 .event-description {
     display: flex;
     flex-direction: column;
@@ -58,17 +57,23 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 30%; 
+    width: 60%; 
     align-items: center;
 }
 
 .event-data p {
     font-size: large;
 }
-
-.event-data input,select {
-    width: 50%;
-    height: 40px;
+.event-data select {
+    width: calc(100% - 20px -  55%);
+}
+.input-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 20px;
+    width: 70%;
 }
 
 .buttons {
@@ -77,7 +82,11 @@
     flex-direction: row;
     gap: 40px;
     justify-content: flex-end;
+}
 
+input, select {
+    width: 50%;
+    height: 40px;
 }
 
 button {
@@ -86,4 +95,8 @@ button {
     width: 15%;
     cursor: pointer;
     padding: 15px 10px;
+}
+
+i {
+    cursor: pointer;
 }
