Hecho gestionar grupos

--- a/src/app/admin-buttons/admin-buttons.component.html
+++ b/src/app/admin-buttons/admin-buttons.component.html
@@ -3,7 +3,7 @@
         <a href="/admin">Añadir Evento</a>
     </div>
     <div class="admin-option" id="noactive">
-        <a href="">Crear organización</a>
+        <a href="/adminCreateOrganization">Crear organización</a>
     </div>
     <div class="admin-option" id="noactive">
         <a href="/adminOrganizations">Gestionar organizaciones</a>
@@ -12,6 +12,6 @@
         <a href="">Gestionar actividades</a>
     </div>
     <div class="admin-option" id="noactive">
-        <a href="">Gestionar grupos</a>
+        <a href="/adminGroups">Gestionar grupos</a>
     </div>
 </div>
