--- a/src/app/admin-create-organization/admin-create-organization.component.html
+++ b/src/app/admin-create-organization/admin-create-organization.component.html
@@ -9,12 +9,8 @@
             <div class="admin-organizations-content-container">
                 <app-admin-buttons></app-admin-buttons>
                 <div class="admin-content">
-                    <div class="header-admin-organizations-container">
-                        <div class="filter">
-                            <p><strong>ORGANIZACIONES</strong></p>
-                            <select name="" id=""></select>
-                        </div>
-                        <button>AÑADIR GRUPO</button>
+                    <div class="header-admin-create-organizations-container">
+                        <button>Añadir miembros</button>
                     </div>
                     <div class="event-description">
                         <div class="event-data">
@@ -37,6 +33,7 @@
                                 <input type="email" name="" id=""  placeholder="ej.:pepito@gmail.com">
                                 <i class="fa fa-pencil"></i>
                             </div>
+
                         </div>
                         <div class="event-data">
                             <p>Dominio</p>
@@ -59,7 +56,7 @@
                         </div>
                     </div>
                     <div class="buttons">
-                        <button>Crear Actividad</button>
+                        <button>Crear Organización</button>
                     </div>
                 </div>
                 
