--- a/src/app/admin-groups/admin-groups.component.html
+++ b/src/app/admin-groups/admin-groups.component.html
@@ -6,15 +6,22 @@
 
         <div class="admin-container">
             <h1>PLATAFORMA DE ADMINISTRACIÓN</h1>
-            <div class="admin-organizations-content-container">
+            <div class="admin-add-event-content-container">
                 <app-admin-buttons></app-admin-buttons>
                 <div class="admin-content">
-                    <div class="header-admin-organizations-container">
+                    <div class="event-filter">
                         <div class="filter">
                             <p><strong>ORGANIZACIONES</strong></p>
                             <select name="" id=""></select>
                         </div>
-                        <button>AÑADIR GRUPO</button>
+                        <div class="filter">
+                            <p><strong>ACTIVIDADES</strong></p>
+                            <select name="" id=""></select>
+                        </div>
+                        <div class="filter">
+                            <p><strong>GRUPOS</strong></p>
+                            <select name="" id=""></select>
+                        </div>
                     </div>
                     <div class="event-description">
                         <div class="event-data">
@@ -32,34 +39,15 @@
                             </div>
                         </div>
                         <div class="event-data">
-                            <p>Correo electrónico</p>
+                            <p>Horario</p>
                             <div class="input-container">
-                                <input type="email" name="" id=""  placeholder="ej.:pepito@gmail.com">
+                                <input type="email" name="" id=""  placeholder="ej.: Lunes[8:30-10:30]">
                                 <i class="fa fa-pencil"></i>
                             </div>
-                        </div>
-                        <div class="event-data">
-                            <p>Dominio</p>
-                            <div class="input-container">
-                                <input type="url" name="" id=""  placeholder="ej.:timify.es">
-                                <i class="fa fa-pencil"></i>
-                            </div>
-                        </div>
-                        <div class="event-data">
-                            <p>Contacto</p>
-                            <div class="input-container">
-                                <input type="text" name="" id=""  placeholder="ej.: +XX XXXXXXXXX">
-                                <i class="fa fa-pencil"></i>
-                            </div>
-                            
-                        </div>
-                        <div class="event-data">
-                            <p>Privacidad</p>
-                            <select name="" id=""></select>
                         </div>
                     </div>
                     <div class="buttons">
-                        <button>Crear Actividad</button>
+                        <button>Gestionar miembros</button>
                     </div>
                 </div>
                 
