diseño de calendario con vistas

--- a/src/app/schedules/schedules.component.css
+++ b/src/app/schedules/schedules.component.css
@@ -25,3 +25,11 @@
     background-color: #f4f4f4;
     min-width: 200px;
 }
+
+.calendar-container{
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 150px;
+}
