--- a/src/app/schedules/schedules.component.html
+++ b/src/app/schedules/schedules.component.html
@@ -10,6 +10,10 @@
                     <option value="1">Ingeniería Informática</option>
                 </select>
             </div>
+            <div class="calendar-container">
+                <app-calendar></app-calendar>
+            </div>
+            
         </div>
         <app-footer></app-footer>
     </div>
