--- a/src/app/admin-organizations/admin-organizations.component.html
+++ b/src/app/admin-organizations/admin-organizations.component.html
@@ -7,62 +7,63 @@
         <div class="admin-container">
             <h1>PLATAFORMA DE ADMINISTRACIÓN</h1>
             <div class="admin-organizations-content-container">
-                <app-admin-buttons></app-admin-buttons>
-                <div class="admin-content">
-                    <div class="header-admin-organizations-container">
-                        <div class="filter">
-                            <p><strong>ORGANIZACIONES</strong></p>
-                            <select name="" id=""></select>
+                <div class="content">
+                    <app-admin-buttons></app-admin-buttons>
+                    <div class="admin-content">
+                        <div class="header-admin-organizations-container">
+                            <div class="filter">
+                                <p><strong>ORGANIZACIONES</strong></p>
+                                <select name="" id=""></select>
+                            </div>
+                            <button>Gestionar Grupos</button>
                         </div>
-                        <button>AÑADIR GRUPO</button>
-                    </div>
-                    <div class="event-description">
-                        <div class="event-data">
-                            <p>Titulo</p>
-                            <div class="input-container">
-                                <input type="text" name="" id=""  placeholder="ej.: Producción de Software">
-                                <i class="fa fa-pencil"></i>
+                        <div class="event-description">
+                            <div class="event-data">
+                                <p>Titulo</p>
+                                <div class="input-container">
+                                    <input type="text" name="" id=""  placeholder="ej.: Producción de Software">
+                                    <i class="fa fa-pencil"></i>
+                                </div>
+                            </div>
+                            <div class="event-data">
+                                <p>Descripción</p>
+                                <div class="input-container">
+                                    <input type="text" name="" id=""  placeholder="ej.: ...">
+                                    <i class="fa fa-pencil"></i>
+                                </div>
+                            </div>
+                            <div class="event-data">
+                                <p>Correo electrónico</p>
+                                <div class="input-container">
+                                    <input type="email" name="" id=""  placeholder="ej.:pepito@gmail.com">
+                                    <i class="fa fa-pencil"></i>
+                                </div>
+                            </div>
+                            <div class="event-data">
+                                <p>Dominio</p>
+                                <div class="input-container">
+                                    <input type="url" name="" id=""  placeholder="ej.:timify.es">
+                                    <i class="fa fa-pencil"></i>
+                                </div>
+                            </div>
+                            <div class="event-data">
+                                <p>Contacto</p>
+                                <div class="input-container">
+                                    <input type="text" name="" id=""  placeholder="ej.: +XX XXXXXXXXX">
+                                    <i class="fa fa-pencil"></i>
+                                </div>
+                                
+                            </div>
+                            <div class="event-data">
+                                <p>Privacidad</p>
+                                <select name="" id=""></select>
                             </div>
                         </div>
-                        <div class="event-data">
-                            <p>Descripción</p>
-                            <div class="input-container">
-                                <input type="text" name="" id=""  placeholder="ej.: ...">
-                                <i class="fa fa-pencil"></i>
-                            </div>
-                        </div>
-                        <div class="event-data">
-                            <p>Correo electrónico</p>
-                            <div class="input-container">
-                                <input type="email" name="" id=""  placeholder="ej.:pepito@gmail.com">
-                                <i class="fa fa-pencil"></i>
-                            </div>
-                        </div>
-                        <div class="event-data">
-                            <p>Dominio</p>
-                            <div class="input-container">
-                                <input type="url" name="" id=""  placeholder="ej.:timify.es">
-                                <i class="fa fa-pencil"></i>
-                            </div>
-                        </div>
-                        <div class="event-data">
-                            <p>Contacto</p>
-                            <div class="input-container">
-                                <input type="text" name="" id=""  placeholder="ej.: +XX XXXXXXXXX">
-                                <i class="fa fa-pencil"></i>
-                            </div>
-                            
-                        </div>
-                        <div class="event-data">
-                            <p>Privacidad</p>
-                            <select name="" id=""></select>
-                        </div>
-                    </div>
-                    <div class="buttons">
-                        <button>Crear Actividad</button>
-                    </div>
+                    </div> 
                 </div>
-                
+                <div class="buttons">
+                    <button>Crear Actividad</button>
+                </div>
             </div>
         </div>
         <app-footer></app-footer>
