--- a/src/app/admin-create-organization/admin-create-organization.component.css
+++ b/src/app/admin-create-organization/admin-create-organization.component.css
@@ -15,9 +15,15 @@
 .admin-organizations-content-container {
     border-radius: 20px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     margin-bottom: 24px;
     align-items: flex-start;
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
 }
 
 .admin-content {
@@ -56,8 +62,8 @@
 .event-data  {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    width: 60%; 
+    gap: 100px;
+    width: 30%; 
     align-items: center;
 }
 
@@ -73,28 +79,28 @@
     align-items: center;
     justify-content: flex-end;
     gap: 20px;
-    width: 70%;
 }
 
 .buttons {
-    margin-top: 40px;
+    margin-bottom: auto;
     display: flex;
     flex-direction: row;
     gap: 40px;
+    align-self: self-end;
     justify-content: flex-end;
-}
-
-input, select {
-    width: 50%;
-    height: 40px;
+    padding: 25px 20px;
 }
 
 button {
     color: white;
     background-color: var(--mainColor);
-    width: 15%;
     cursor: pointer;
-    padding: 15px 10px;
+    padding: 15px 20px;
+}
+
+input, select {
+    width: 100%;
+    height: 40px;
 }
 
 i {
