--- a/src/app/admin-groups/admin-groups.component.css
+++ b/src/app/admin-groups/admin-groups.component.css
@@ -15,9 +15,15 @@
 .admin-add-event-content-container {
     border-radius: 20px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     margin-bottom: 24px;
     align-items: flex-start;
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
 }
 
 .admin-content {
@@ -26,7 +32,6 @@
     flex-direction: column;
     margin-left: 5%;
     padding: 15px 20px;
-    min-height: 100vh;
 }
 
 .event-filter {
@@ -57,6 +62,7 @@
     height: 30px;
 }
 
+
 .event-description {
     display: flex;
     flex-direction: column;
@@ -68,48 +74,44 @@
 .event-data  {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    width: 60%; 
+    gap: 100px;
+    width: 30%; 
     align-items: center;
 }
 
 .event-data p {
     font-size: large;
 }
-.event-data select {
-    width: calc(100% - 20px -  55%);
+
+.event-data input,select {
+    width: 60%;
+    height: 40px;
 }
+
 .input-container {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-end;
     gap: 20px;
-    width: 70%;
 }
 
 .buttons {
-    margin-top: auto;
+    margin-top: 40px;
     display: flex;
     flex-direction: row;
     gap: 40px;
-    justify-content: flex-end;
-}
-
-input, select {
-    width: 50%;
-    height: 40px;
+    align-self: self-end;
+    padding: 25px 20px;
 }
 
 button {
     color: white;
     background-color: var(--mainColor);
-    width: 15%;
     cursor: pointer;
-    padding: 15px 10px;
+    padding: 15px 20px;
 }
 
 i {
     cursor: pointer;
 }
-
