--- a/src/app/admin-groups/admin-groups.component.html
+++ b/src/app/admin-groups/admin-groups.component.html
@@ -7,50 +7,51 @@
         <div class="admin-container">
             <h1>PLATAFORMA DE ADMINISTRACIÓN</h1>
             <div class="admin-add-event-content-container">
-                <app-admin-buttons></app-admin-buttons>
-                <div class="admin-content">
-                    <div class="event-filter">
-                        <div class="filter">
-                            <p><strong>ORGANIZACIONES</strong></p>
-                            <select name="" id=""></select>
-                        </div>
-                        <div class="filter">
-                            <p><strong>ACTIVIDADES</strong></p>
-                            <select name="" id=""></select>
-                        </div>
-                        <div class="filter">
-                            <p><strong>GRUPOS</strong></p>
-                            <select name="" id=""></select>
-                        </div>
-                    </div>
-                    <div class="event-description">
-                        <div class="event-data">
-                            <p>Titulo</p>
-                            <div class="input-container">
-                                <input type="text" name="" id=""  placeholder="ej.: Producción de Software">
-                                <i class="fa fa-pencil"></i>
+                <div class="content">
+                    <app-admin-buttons></app-admin-buttons>
+                    <div class="admin-content">
+                        <div class="event-filter">
+                            <div class="filter">
+                                <p><strong>ORGANIZACIONES</strong></p>
+                                <select name="" id=""></select>
+                            </div>
+                            <div class="filter">
+                                <p><strong>ACTIVIDADES</strong></p>
+                                <select name="" id=""></select>
+                            </div>
+                            <div class="filter">
+                                <p><strong>GRUPOS</strong></p>
+                                <select name="" id=""></select>
                             </div>
                         </div>
-                        <div class="event-data">
-                            <p>Descripción</p>
-                            <div class="input-container">
-                                <input type="text" name="" id=""  placeholder="ej.: ...">
-                                <i class="fa fa-pencil"></i>
+                        <div class="event-description">
+                            <div class="event-data">
+                                <p>Titulo</p>
+                                <div class="input-container">
+                                    <input type="text" name="" id=""  placeholder="ej.: Producción de Software">
+                                    <i class="fa fa-pencil"></i>
+                                </div>
+                            </div>
+                            <div class="event-data">
+                                <p>Descripción</p>
+                                <div class="input-container">
+                                    <input type="text" name="" id=""  placeholder="ej.: ...">
+                                    <i class="fa fa-pencil"></i>
+                                </div>
+                            </div>
+                            <div class="event-data">
+                                <p>Horario</p>
+                                <div class="input-container">
+                                    <input type="email" name="" id=""  placeholder="ej.: Lunes[8:30-10:30]">
+                                    <i class="fa fa-pencil"></i>
+                                </div>
                             </div>
                         </div>
-                        <div class="event-data">
-                            <p>Horario</p>
-                            <div class="input-container">
-                                <input type="email" name="" id=""  placeholder="ej.: Lunes[8:30-10:30]">
-                                <i class="fa fa-pencil"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="buttons">
-                        <button>Gestionar miembros</button>
                     </div>
                 </div>
-                
+                <div class="buttons">
+                    <button>Gestionar miembros</button>
+                </div>
             </div>
         </div>
         <app-footer></app-footer>
