--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="left-container">
       <h1>TIMIFY</h1>
       <nav>
-        <a href="">Calendario</a>
+        <a href="/schedules">Calendario</a>
         <a href="">Horarios</a>
         <a href="/organizations">Organizaciones</a>
       </nav>
@@ -19,4 +19,4 @@
       <button (click)="register()">Register</button>
     </div>
   </header>
-  
+    
