--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -100,6 +100,7 @@
 
   .contenido{
     display: flex;
+    flex-direction: column;
     border: 1px solid #ddd;
     padding: 10px;
     min-height: 100px;
@@ -131,26 +132,36 @@
 .vista-dia {
     display: flex;
     flex-direction: column;
-  }
-  
-  .titulo-dia {
+}
+
+.titulo-dia {
     font-weight: bold;
     padding: 30px 10px;
     font-size: xx-large;
     border-bottom: 1px solid #ddd;
     background-color: #f3f3f3;
-  }
-  
-  .horas-dia {
+}
+
+.horas-dia {
     display: grid;
     grid-template-rows: repeat(12, 1fr);
-  }
-  
-  .hora-dia {
+}
+
+.hora-dia {
     border-bottom: 1px solid #ddd;
     padding: 5px;
     min-height: 100px;
-  }
+}
+
+.evento{
+    background-color: #f3f3f3;
+    border: 1px solid #ddd;
+    padding: 10px;
+    height: fit-content; 
+    margin: 15px 0px;
+    font-weight: 700;
+    cursor: pointer;
+}
   
 
 @media (max-width: 600px) {
