--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -20,25 +20,49 @@
             <div class="horas-dia">
               <div *ngFor="let hora of horas" class="hora-dia">
                 {{ hora }}
+                <ng-container *ngFor="let evento of eventos">
+                  <div class="evento" *ngIf="seMuestraEvento(evento, hora, 'dia')">
+                    {{ evento.titulo }}
+                  </div>
+                </ng-container>
               </div>
             </div>
           </div>
+          
 
           <div *ngIf="vistaActual === 'semana'" class="vista-semana">
-            <div class="fila">
+            <div class="fila fila-dias-semana">
               <div class="celda hora"></div>
-              <div *ngFor="let diaSemana of diasSemana" class="celda">{{ diaSemana }}</div>
+              <div *ngFor="let diaSemana of diasSemana" class="celda dia-semana">{{ diaSemana }}</div>
             </div>
             <div *ngFor="let hora of horas" class="fila">
               <div class="celda hora">{{ hora }}</div>
-              <div *ngFor="let dia of diasSemana" class="contenido"></div>
+              <ng-container *ngFor="let dia of diasSemana; let i = index">
+                <div class="contenido">
+                  <ng-container *ngFor="let evento of eventos">
+                    <div class="evento" *ngIf="seMuestraEvento(evento, hora, 'semana', i)">
+                      {{ evento.titulo }}
+                    </div>
+                  </ng-container>
+                </div>
+              </ng-container>
             </div>
           </div>
           
           
-        <div *ngIf="vistaActual === 'mes'" class="dias">
-            <div *ngFor="let dia of diasMes" class="dia">{{ dia }}</div>
-        </div>
+          
+          
+          <div *ngIf="vistaActual === 'mes'" class="dias">
+            <div *ngFor="let dia of diasMes" class="dia">
+              {{ dia }}
+              <ng-container *ngFor="let evento of eventos">
+                <div class="evento" *ngIf="seMuestraEvento(evento, dia, 'mes')">
+                  {{ evento.titulo }}
+                </div>
+              </ng-container>
+            </div>
+          </div>
+          
 
     </div>
 </div>
