Hecho admin templates, faltan popUps

--- a/src/app/admin-buttons/admin-buttons.component.html
+++ b/src/app/admin-buttons/admin-buttons.component.html
@@ -9,7 +9,7 @@
         <a href="/adminOrganizations">Gestionar organizaciones</a>
     </div>
     <div class="admin-option" id="noactive">
-        <a href="">Gestionar actividades</a>
+        <a href="/adminActivities">Gestionar actividades</a>
     </div>
     <div class="admin-option" id="noactive">
         <a href="/adminGroups">Gestionar grupos</a>
